force-app/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <label>Order</label>
    <nameField>
        <displayFormat>SO{0000000000}</displayFormat>
        <label>SF Order No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>