force-app/main/default/objects/Order__c/fields/Hisense_Entity__c.field-meta.xml
<CustomField>
    <fullName>Hisense_Entity__c</fullName>
    <externalId>true</externalId>
    <label>Hisense Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>