force-app/main/default/objects/Order__c/fields/Notes_For_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Notes_For_Sales_Order__c</fullName>
    <label>Notes For Sales Order</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>