force-app/main/default/objects/Order__c/fields/Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Order_Amount__c</fullName>
    <label>Total Order Amount(EX VAT)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>