force-app/main/default/objects/Order__c/fields/Order_Classification__c.field-meta.xml
<CustomField>
    <fullName>Order_Classification__c</fullName>
    <label>Order Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>