force-app/main/default/objects/Order__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <formula>CASE( Order_Type_Code__c , 
&apos;ZCR&apos;,  $Label.Order_Type_ZCR , &apos;ZCR1&apos;, $Label.Order_Type_ZCR1,
&apos;ZCR2&apos;,  $Label.Order_Type_ZCR2 , &apos;ZDR&apos;, $Label.Order_Type_ZDR,
&apos;ZDR1&apos;,  $Label.Order_Type_ZDR1 , &apos;ZGOR&apos;, $Label.Order_Type_ZGOR,
&apos;ZGRE&apos;,  $Label.Order_Type_ZGRE , &apos;ZOR3&apos;, $Label.Order_Type_ZOR3,
&apos;ZOR4&apos;,  $Label.Order_Type_ZOR4 , &apos;ZOR5&apos;, $Label.Order_Type_ZOR5,
&apos;ZOR6&apos;,  $Label.Order_Type_ZOR6 , &apos;ZOR9&apos;, $Label.Order_Type_ZOR9,
&apos;ZORA&apos;,  $Label.Order_Type_ZORA, &apos;ZORX&apos;, $Label.Order_Type_ZORX,
&apos;ZRE&apos;,  $Label.Order_Type_ZRE, &apos;ZRE1&apos;, $Label.Order_Type_ZRE1,
&apos;ZRE2&apos;,  $Label.Order_Type_ZRE2 , &apos;ZREX&apos;, $Label.Order_Type_ZREX,
&apos;ZSV&apos;,  $Label.Order_Type_ZSV , &apos;ZSV1&apos;, $Label.Order_Type_ZSV1,
&apos;ZSV2&apos;,  $Label.Order_Type_ZSV2 , &apos;ZSV3&apos;, $Label.Order_Type_ZSV3,
&apos;ZSV4&apos;,  $Label.Order_Type_ZSV4,null)</formula>
    <label>Order Type</label>
    <type>Text</type>
</CustomField>