force-app/main/default/objects/Order__c/fields/Order_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_Type_Name__c</fullName>
    <label>Order Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>