force-app/main/default/objects/Order__c/fields/OrderClassificationCove__c.field-meta.xml
<CustomField>
    <fullName>OrderClassificationCove__c</fullName>
    <description>PO 的订单类别是E
SO 的订单类型是S
VO 的订单类型是V</description>
    <formula>IF(ISBLANK(Order_Classification__c), &quot;None&quot;,
IF(CONTAINS(&quot;E&quot;, Order_Classification__c), &quot;EDI Order&quot;,
IF(CONTAINS(&quot;V&quot;, Order_Classification__c), &quot;Virtual Order&quot;,
IF(CONTAINS(&quot;S&quot;, Order_Classification__c), &quot;Sales Order&quot;,&quot;Other&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderClassificationEN</label>
    <type>Text</type>
</CustomField>