force-app/main/default/objects/Order__c/fields/PODATE__c.field-meta.xml
<CustomField>
    <fullName>PODATE__c</fullName>
    <label>PODATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>