force-app/main/default/objects/Order__c/fields/Req_Deliv_Date__c.field-meta.xml
<CustomField>
    <fullName>Req_Deliv_Date__c</fullName>
    <label>Required Delivery Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>