force-app/main/default/objects/Order__c/fields/Sales_Group__c.field-meta.xml
<CustomField>
    <fullName>Sales_Group__c</fullName>
    <label>Sales Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>