force-app/main/default/objects/Order__c/fields/Sales_Office_Desc__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office_Desc__c</fullName>
    <label>Sales Office Desc</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>