force-app/main/default/objects/Order__c/fields/SAP_Bill_to_City__c.field-meta.xml
<CustomField>
    <fullName>SAP_Bill_to_City__c</fullName>
    <label>SAP Bill to City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>