force-app/main/default/objects/Order__c/fields/SAP_Customer_Region__c.field-meta.xml
<CustomField>
    <fullName>SAP_Customer_Region__c</fullName>
    <label>SAP Customer Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>