force-app/main/default/objects/Order__c/fields/SAP_Order_No__c.field-meta.xml
<CustomField>
    <fullName>SAP_Order_No__c</fullName>
    <label>SAP Order No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>