force-app/main/default/objects/Order__c/fields/SAP_Ship_to_Address__c.field-meta.xml
<CustomField>
    <fullName>SAP_Ship_to_Address__c</fullName>
    <label>交货地</label>
    <length>255</length>
    <type>Text</type>
</CustomField>