force-app/main/default/objects/Order__c/fields/SAP_Ship_to_Name__c.field-meta.xml
<CustomField>
    <fullName>SAP_Ship_to_Name__c</fullName>
    <label>SAP Ship to Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>