force-app/main/default/objects/Order__c/fields/Shipping_Window_To__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Window_To__c</fullName>
    <label>Shipping Window To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>