force-app/main/default/objects/Order__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>Order_Product__c.Total_Sales_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Order_Product__c.SAP_Product_Line_SO__c</field>
        <operation>contains</operation>
        <value>66,67</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Product__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>