force-app/main/default/objects/Order__c/fields/Total_Amount_Inc_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Inc_Tax__c</fullName>
    <label>Total Order Amount(Inc VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>