force-app/main/default/objects/Order__c/fields/Virtual_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Order_No__c</fullName>
    <label>Virtual Order No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>