force-app/main/default/objects/Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SAP_Order_No__c</columns>
    <columns>Purchase_Order_No__c</columns>
    <columns>Customer__c</columns>
    <columns>Order_Classification__c</columns>
    <columns>Order_Type_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Hisense_Entity__c</field>
        <operation>equals</operation>
        <value>8110</value>
    </filters>
    <label>All</label>
</ListView>