force-app/main/default/objects/Order__c/listViews/My_Open_Order.listView-meta.xml
<ListView>
    <fullName>My_Open_Order</fullName>
    <columns>NAME</columns>
    <columns>SAP_Order_No__c</columns>
    <columns>Purchase_Order_No__c</columns>
    <columns>Customer__c</columns>
    <columns>Order_Classification__c</columns>
    <columns>Order_Type_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SumInvoiceItem__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Open Order</label>
</ListView>