force-app/main/default/objects/Order__c/listViews/PO_view.listView-meta.xml
<ListView>
    <fullName>PO_view</fullName>
    <columns>NAME</columns>
    <columns>SAP_Order_No__c</columns>
    <columns>Purchase_Order_No__c</columns>
    <columns>Customer__c</columns>
    <columns>Order_Classification__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Order_Type_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Classification__c</field>
        <operation>equals</operation>
        <value>E</value>
    </filters>
    <label>PO</label>
</ListView>