force-app/main/default/objects/Order__c/listViews/SO_view.listView-meta.xml
<ListView>
    <fullName>SO_view</fullName>
    <columns>NAME</columns>
    <columns>SAP_Order_No__c</columns>
    <columns>Purchase_Order_No__c</columns>
    <columns>Customer__c</columns>
    <columns>Order_Classification__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Order_Type_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Hisense_Entity__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Classification__c</field>
        <operation>equals</operation>
        <value>S</value>
    </filters>
    <label>SO</label>
</ListView>