force-app/main/default/objects/Order__c/listViews/VO_view.listView-meta.xml
<ListView>
    <fullName>VO_view</fullName>
    <columns>SAP_Order_No__c</columns>
    <columns>Purchase_Order_No__c</columns>
    <columns>Customer__c</columns>
    <columns>Order_Classification__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Order_Type_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Classification__c</field>
        <operation>equals</operation>
        <value>V</value>
    </filters>
    <label>VO</label>
</ListView>